Removed required for description

--- a/views/calendar/create.ejs
+++ b/views/calendar/create.ejs
@@ -20,7 +20,7 @@
 
             <div class="mb-3">
               <label for="scheduleDate" class="col-form-label">Schedule Date & Time (e.g. 202208131400)</label>
-              <input type="text" class="form-control" name="scheduleDate" required>
+              <input type="text" class="form-control" name="scheduleDate" autocomplete="off" required>
             </div>
 
             <div class="mb-3">
@@ -30,7 +30,7 @@
 
             <div class="mb-3">
               <label for="scheduleDesc" class="col-form-label">Description</label>
-              <input type="text" class="form-control" name="scheduleDesc" required>
+              <input type="text" class="form-control" name="scheduleDesc">
             </div>
 
             <div class="d-flex justify-content-center">
