--- a/views/calendar/daily.ejs
+++ b/views/calendar/daily.ejs
@@ -23,6 +23,7 @@
               <select class="form-select" name="type">
                 <option value="daily">Daily</option>
                 <option value="reminder">Reminder</option>
+                <option value="tweetDaily">Tweet Daily</option>
               </select>
             </div>
 
@@ -36,8 +37,9 @@
             </div>
           </form>
 
-          <div class="mt-3 mb-3">
-            <textarea class="form-control" name="content" id="contentTextArea" rows="15" readonly></textarea>
+          <div class="mt-3 mb-3" id="contentDisplay">
+
+            <!-- <textarea class="form-control" name="content" id="contentTextArea" rows="15" readonly></textarea> -->
           </div>
         </div>
       </div>
