Cyclic deploy fix

--- a/views/calendar/daily.ejs
+++ b/views/calendar/daily.ejs
@@ -23,7 +23,7 @@
               <select class="form-select" name="type">
                 <option value="daily">Daily</option>
                 <option value="reminder">Reminder</option>
-                <option value="tweetDaily">Tweet Daily</option>
+                <option value="tweetDaily">Tweet Daily Schedule</option>
               </select>
             </div>
 
