Changed UI color mode, changed date input to number type

--- a/views/calendar/create.ejs
+++ b/views/calendar/create.ejs
@@ -1,6 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-
 <head>
   <%- include('../include/head.ejs')  %>
 
@@ -20,7 +17,7 @@
 
             <div class="mb-3">
               <label for="scheduleDate" class="col-form-label">Schedule Date & Time (e.g. 202208131400)</label>
-              <input type="text" class="form-control" name="scheduleDate" autocomplete="off" required>
+              <input type="number" min="0" inputmode="numeric" pattern="[0-9]*" class="form-control" name="scheduleDate" autocomplete="off" required>
             </div>
 
             <div class="mb-3">
