--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,28 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-
 <head>
   <%- include('include/head.ejs') %>
-  <!-- External Files and Plugins -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
-  <link rel="stylesheet" href="/css/style.css">
-
-
-  <!-- Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-
-  <script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.10/dist/clipboard.min.js"></script>
 
   <title>IZ-CAL</title>
 </head>
 
-<body style="background-color: #D9D7F1;">
+<body>
   <%- include('include/navbar.ejs') %>
-
-
   <div class="container py-5 h-100">
   </div>
 
