--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,16 +9,16 @@ body {
     padding: 0;
 }
 
-body {
-    background-color: #D9D7F1;
-}
+/* body {
+    background-color: #9DB2BF;
+} */
 
 /* Containers */
 
 /* Navigation Bar */
 #navigation_bar {
     overflow: visible !important;
-    background-color: #0A1931 !important;
+    background-color: #193498 !important;
     z-index: 9999;
     padding-inline: 2%;
 }
