--- a/views/calendar/create.ejs
+++ b/views/calendar/create.ejs
@@ -31,7 +31,7 @@
             </div>
 
             <div class="d-flex justify-content-center">
-              <button type="submit" name="submitBtn" class="btn btn-outline-dark">Submit</button>
+              <button type="submit" name="submitBtn" class="btn btn-primary">Submit</button>
             </div>
           </form>
 
