Format date time for created event

--- a/views/calendar/daily_created.ejs
+++ b/views/calendar/daily_created.ejs
@@ -19,7 +19,8 @@
           </div>
 
           <script>
-            let start = "<%=data.start.dateTime%>" || "<%=data.start.date%>";
+            // let start = "<%=data.start.dateTime%>" || "<%=data.start.date%>";
+            let start = "<%=data.formattedDateTime%>";
             let summary = "<%=data.summary%>"
             let description = "<%=data.description %>" || "";
             let link = "<%=data.htmlLink %>";
