--- a/views/include/navbar.ejs
+++ b/views/include/navbar.ejs
@@ -1,7 +1,15 @@
-<nav id="navigation_bar" class="navbar navbar-expand-lg bg-dark navbar-dark py-1 sticky-top">
+<nav
+  id="navigation_bar"
+  class="navbar navbar-expand-lg bg-dark navbar-dark py-1 sticky-top"
+>
   <a href="/" class="navbar-brand">IZ-CAL</a>
 
-  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-bs-toggle="collapse"
+    data-bs-target="#navmenu"
+  >
     <span class="navbar-toggler-icon"></span>
   </button>
 
@@ -10,26 +18,12 @@
       <li class="nav-item">
         <a href="/" class="nav-link">Home</a>
       </li>
-      <% if(!isAuthenticated) {%>
       <li class="nav-item">
-        <a href="/login" class="nav-link text-info">Log In</a>
-      </li>
-      <% } else { %>
-      <li class="nav-item">
-        <a href="/dashboard" class="nav-link">Dashboard</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Schedule</a>
-        <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="/calendar/daily">Daily</a></li>
-          <li><a class="dropdown-item" href="/calendar/create">Create New</a></li>
-        </ul>
+        <a href="/calendar/daily" class="nav-link">Daily</a>
       </li>
       <li class="nav-item">
-        <a href="/logout" class="nav-link text-warning">Log Out</a>
+        <a href="/calendar/create" class="nav-link">Create</a>
       </li>
-      <% } %>
-
     </ul>
   </div>
 </nav>
